static/style.css
@font-face {
    font-family: patricstar;
    src: url(/fonts/PatrickHand-Regular.ttf) format("truetype");
    font-display: swap;
}

body {
    background-color: #eee;
    font-family: patricstar, sans-serif;
    margin: 0px;
    padding: 0px;
}

h1 {
    text-align: center;
    font-size: 100px;
    color: #000;
    margin: 0px;
    margin-bottom: 70px;
}

.new-task {
    background-color: #eee;
    text-align: center;
}

.new-int {
    height: 35px;
    margin: 0px 7.5px;
    padding: 0px;
    border-radius: 10px;
    border-width: 3px;
    border-color: #000;
}

.new-int- {
    display: inline-block;
    background-color: #aaa;
    padding: 10px;
    border-radius: 10px;
}

textarea.new-int::placeholder {
    padding: 0px;
    font-family: patricstar, sans-serif;
}

input.new-int {
    width: 200px;
    padding-left: 9px;
    font-family: patricstar, sans-serif;
}

textarea.new-int {
    width: 450px;
    height: 25.25px;
    vertical-align: bottom;
    padding-top: 9px;
    padding-left: 9px;
    font-family: patricstar, sans-serif;
}

button.new-int {
    width: 75px;
}

div.task-list-container {
    background-color: #eee;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 2rem;
}

div.tabs-row {
    display: flex;
    width: 1030px;
    gap: 0.5rem;
    align-items: baseline;
}

button.tab-button {
    border-radius: 0px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    margin: 0px;
    border: 0px;
    background-color: #ccc;
    padding: 0.4em;
    transition: 0.2s;
    overflow: hidden;
}

button.tab-button:hover {
    background-color: #b9b9b9;
    transition: 0.2s;
}

button.tab-button.active {
    background-color: #aaa;
}

button.tab-button.task-notification {
    position: relative;
}

button.tab-button.task-notification::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 3px;
    height: 100%;
    background-color: red;
}

ul.task-list,
ul.project-list {
    display: flex;
    flex-direction: column;
    text-decoration: none;
    margin: 0px;
    padding: 0px;
}

ul.task-list {
    flex: 2.5;
    text-align: center;
    gap: 10px;
}

ul.project-list {
    flex: 1;
    align-items: baseline;
}

.task-list-inner-container {
    display: flex;
    background-color: #aaa;
    text-align: center;
    text-decoration: none;
    width: 1010px;
    padding: 10px;
    margin: 0px;
    gap: 0.5rem;
    border-radius: 10px;
    border-top-left-radius: 0px;
}

li {
    list-style-type: none;
}

li.task-item {
    display: inline-block;
    background-color: #777;
    border-radius: 10px;
    width: 100%;
    padding: 8px 0px 8px 0px;
}

.projects {
    display: flex;
    border-right: 1px solid gray;
    padding-right: 0.5rem;
}

.task-row {
    display: flex;
    width: 100%;
}

.task-content {
    display: flex;
    width: 100%;
    cursor: pointer;
    justify-content: space-between;
    height: 100%;
    padding-left: 0px;
    padding-right: 8px;
}

.checkbox-container {
    margin-left: 4px;
    margin-right: 4px;
}
.task-content-left {
    display: flex;
    gap: 0.5em;
    text-align: left;
    width: 100%;
}

.task-priority {
    width: 3em;
}

li.task-item:hover {
    background-color: #ccc;
}

button.show-more {
    display: flex;
}

#empty-message {
    list-style-type: none;
    display: block;
}

#task-list:has(.task-item) #empty-message {
    display: none;
}

.show-more {
    width: 100%;
    height: 100%;
    display: flex;
}

.modal {
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    z-index: 1000;
    width: 100%;
    height: 100%;
}

.model-inner {
    background-color: #222;
    border-radius: 0.5em;
    max-width: 600px;
    padding: 2em;
    margin: auto;
}

.modal-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 2px solid #fefefe;
}

.overlay {
    position: fixed;
    margin: 0px;
    background-color: rgba(0, 0, 0, 0.7);
    width: 100%;
    height: 100vh;
}

.task-description,
.task-name-modal {
    border: none;
    font-family: patricstar, sans-serif;
    box-sizing: border-box;
    background-color: transparent;
    color: #fefefe;
}

.task-name-modal {
    font-size: 1.3em;
}

.task-description {
    font-size: 15px;
    resize: none;
    width: 400px;
    height: 100px;
    box-sizing: border-box;
}

.task-description:focus,
.task-name-modal:focus {
    outline: none;
    border: none;
}

.task-description:hover,
.task-name-modal:hover {
    outline: 1px solid rgba(50, 50, 50, 0.3);
}

.nope {
    opacity: 0.5;
    cursor: not-allowed;
}

.i-button,
.i-label-button {
    border: none;
    background-color: transparent;
    border-radius: 3px;
    padding: 2px;
    transition: 0.1s;
    cursor: pointer;
}

.i-button:hover,
.i-label-button:hover {
    background-color: rgba(0, 0, 0, 0.2);
    transition: 0.1s;
}

.i-label-button.active,
.i-button.active {
    background-color: lightblue;
}

.priority-menu {
    position: absolute;
    bottom: 100%;
    left: calc(1rem + 8px);
    background-color: #222;
    border: 1px solid #555;
    border-radius: 10px;
    padding: 0.5rem;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    z-index: 1010;
}

.priority-menu button {
    text-align: left;
    padding: 0.2rem 0.5rem;
    color: #fefefe;
}

.CodeMirror pre.CodeMirror-line,
.task-description-preview * {
    color: #fefefe !important;
    font-family: "Inter", "Segoe UI", Arial, Helvetica, sans-serif !important;
}

.cm-header-1,
.task-description-preview h1 {
    font-size: 2.1em !important;
    text-align: left;
    color: #fff;
}
.cm-header-2,
.task-description-preview h2 {
    font-size: 1.8em !important;
    margin-top: 10px;
}
.cm-header-3,
.task-description-preview h3 {
    font-size: 1.5em !important;
}
.cm-strong .task-description-preview strong {
    font-weight: bold;
    color: #fff;
}
.cm-em .task-description-preview em {
    font-style: italic;
}

.cm-formatting {
    opacity: 0.2;
    font-family: monospace;
}

.cm-property {
    color: lightskyblue;
    opacity: 1;
    font-family: monospace;
}

.EasyMDEContainer,
.CodeMirror,
.CodeMirror-scroll,
.CodeMirror-gutters {
    background: transparent !important;
    border: none !important;
}

.CodeMirror-cursor {
    border-left: 2px solid lightblue !important;
    width: 2px !important;
}

.preview-stack {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    align-items: start;
    margin-top: 1rem;
}

.easymde-description-container,
.task-description-preview {
    grid-area: 1 / 1;
}

.task-description-preview {
    pointer-events: none;
}

[x-cloak] {
    display: none !important;
}

